# FritzEnergy

./: .gitignore  README.md  pyproject.toml
csv/: 20241031_235054_id00031_1month.csv  20250429_085520_id00031_1month.csv  20250430_235320_id00031_1month.csv  20250531_235123_id00031_1month.csv  Hahn_Strom_03.03.2024_08-56_2years.csv  Hahn_Strom_03.03.2024_08-56_month.csv  Hahn_Strom_11.11.2024_07-38_month.csv  Hahn_Strom_15.05.2024_08-12_month.csv  Hahn_Strom_22.04.2024_09-47_month.csv  Hahn_Strom_27.07.2024_12-11_month.csv  Hahn_Strom_28.01.2025_12-16_month.csv  Hahn_Strom_29.03.2025_07-49_month.csv  Hahn_Strom_29.04.2025_08-35_month.csv  Hahn_Strom_29.05.2025_08-05_month.csv  Hahn_Strom_29.05.2025_17-52_24h.csv  Hahn_Strom_29.05.2025_17-56_week.csv  Hahn_Strom_29.05.2025_17-57_2years.csv  Hahn_Strom_29.05.2025_17-57_month.csv  Hahn_Strom_29.05.2025_18-00_24h.csv  Hahn_Strom_29.05.2025_18-01_week.csv  Hahn_Strom_30.04.2025_10-15_24h.csv  Hahn_Strom_30.04.2025_10-15_month.csv  Hahn_Strom_30.04.2025_10-15_week.csv  Hahn_Strom_30.04.2025_10-16_2years.csv  Hahn_Strom_31.07.2024_23-52_month.csv  Hahn_Strom_31.08.2024_23-52_month.csv
src/: fritz_strom.py
