[project]
name = "FritzEnergy"
version = "0.1.0"
description = "Analyse Fritz!Energy 200 reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "intervaltree>=3.1.0",
]
authors = [
    {name = "Philipp Hahn", email = "pmhahn@pmhahn.de"},
]
license = "MIT"
keywords = ["AVM", "FritzBox", "SmartHome", "CSV"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
    "Programming Language :: Python :: 3",
]

[project.urls]

[project.scripts]
fritz-strom = "fritz_strom:main"

[project.optional-dependencies]
plt = [
    "matplotlib>=3.10.3",
    "pyside6>=6.9.1",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T20", "D", "E501", "S101" ,"ERA", "DTZ"]
